k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: project-1-deployment
  labels:
    app: project-1

spec:
  replicas: 2

  selector:
    matchLabels:
      app: project-1

  template:
    metadata:
      labels:
        app: project-1

    spec:
      containers:
      - name: project-1-container

<<<<<<< HEAD
        image: 811345154438.dkr.ecr.us-east-1.amazonaws.com/project-1:38
=======
        image: 811345154438.dkr.ecr.us-east-1.amazonaws.com/project-1:38
>>>>>>> 3209898 (chnages in port number to acces the app)

        ports:
        - containerPort: 8080
