k8s/service.yaml
```yaml
apiVersion: v1
kind: Service

metadata:
  name: project-1-service

spec:
  type: NodePort

  selector:
    app: project-1

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
